# hyprqtile

./: Cargo.toml  PKGBUILD  README.md  flake.nix
.github/workflows/: release.yml
.github/workspaces/: release.yml
src/: cli.rs  error.rs  ipc.rs  lib.rs  main.rs  maximize.rs  minimize.rs  prelude.rs  qtile_workspaces.sh  toggle.rs  workspace.rs
src/commands/: maximize.rs  minimize.rs  mod.rs  toggle.rs  workspace.rs
tests/: commands.rs  minimize_test.rs  toggle_test.rs  utils.rs
