[package]
name = "hyprqtile"
authors = ["daniqss"]
license = "GPL-3.0"
repository = "https://github.com/daniqss/hyprqtile"
keywords = ["cli", "hyprland", "qtile"]
categories = ["command-line-utilities"]
description = "Qtile-like workspaces and monitors management for the Hyprland compositor"
version = "0.1.7"
edition = "2021"

[dependencies]
clap = {version = "4.5.6", features = ["derive"]}
hyprland = "0.4.0-beta.1"
thiserror = "2.0.3"

[profile.release]
opt-level = "z"  
lto = true       
codegen-units = 1 
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[dev-dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
